--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
     <meta name="A to-do list application" content="A to-do list application">
     <meta name="Erin Mahoney" content="Erin Mahoney"> 
     <title>To-Do List App</title> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.1/foundation.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>To-Do App</h2>
-    <input type='text' id='todo' placeholder='New Task'>
-    <ul id="list"></ul>
+    <div class="grid-frame">
+      <div class="grid-block">
+        <div class="row">
+          <div class="small-6 large-centered columns">
+            <div class="markAll">
+              <span>Mark all as finished</span>
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              <hr>
+            </div>
+            <h2>Things I need to do...</h2>
+            <ul id="list"></ul>
+            <form class="" action="index.html" method="post">
+              <span>Things I should do next...</span>
+              <a href="#"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
+              <input type='text' id='todo' placeholder='Please enter a new task'>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.1/plugins/foundation.core.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
