--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <hr>
             </div>
-            <h2>Things I need to do...</h2>
-            <ul id="list"></ul>
-            <form class="" action="index.html" method="post">
-              <span>Things I should do next...</span>
-              <a href="#"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
-              <input type='text' id='todo' placeholder='Please enter a new task'>
-            </form>
+            <div class="">
+              <h2>Things I need to do...</h2>
+              <ul id="list"></ul>
+            </div>
+            <div class="">
+              <form class="" action="index.html" method="post">
+                <span>Things I should do next...</span>
+                <a href="#"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
+                <input type='text' id='todo' placeholder='Please enter a new task'>
+              </form>
+            </div>
           </div>
         </div>
       </div>
