Cleaned up syntax.  Added float to li

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <h2>Things I need to do...</h2>
               <ul id="list"></ul>
             </div>
-            <div class="">
+            <div class="makeTodoForm">
               <form class="" action="index.html" method="post">
                 <span>Things I should do next...</span>
                 <a href="#"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
