Fixed add feature and a tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="A to-do list application" content="A to-do list application">
     <meta name="Erin Mahoney" content="Erin Mahoney"> 
     <title>To-Do List App</title> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.1/foundation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.1/foundation-rtl.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -24,11 +24,11 @@
               <ul id="list"></ul>
             </div>
             <div class="makeTodoForm">
-              <form class="" action="index.html" method="post">
+              <!-- <form class="" action="index.html" method="post"> -->
                 <span>Things I should do next...</span>
-                <a href="#"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
+                <a href="javascript:void(0)"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
                 <input type='text' id='todo' placeholder='Please enter a new task'>
-              </form>
+              <!-- </form> -->
             </div>
           </div>
         </div>
