Added responsive styling

--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
     <div class="grid-frame">
       <div class="grid-block">
         <div class="row">
-          <div class="small-6 large-centered columns">
+          <div class="small-9 small-centered columns">
             <div class="markAll">
-              <span>Mark all as finished</span>
+              <a href="javascript:void(0)">Mark all as finished</a>
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <hr>
             </div>
-            <div class="">
+            <div class="listContainer">
               <h2>Things I need to do...</h2>
               <ul id="list"></ul>
-            </div>
-            <div class="makeTodoForm">
-              <!-- <form class="" action="index.html" method="post"> -->
-                <span>Things I should do next...</span>
+              <div class="makeTodoForm">
+                <h2>Things I should do next...</h2>
                 <a href="javascript:void(0)"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
                 <input type='text' id='todo' placeholder='Please enter a new task'>
-              <!-- </form> -->
+              </div>
             </div>
           </div>
         </div>
