--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <div class="grid-block">
         <div class="row">
           <div class="small-9 small-centered columns">
+            <div class="notification">
+              <p>You completed a task.  Way to go!</p>
+              <a class="closeNotification" href="javascript:void(0)"><i class="fa fa-times" aria-hidden="true"></i></a>
+            </div>
             <div class="markAll">
               <a href="javascript:void(0)">Mark all as finished</a>
               <i class="fa fa-check-circle" aria-hidden="true"></i>
