Added readme text and favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.1/foundation-rtl.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="checkmark.png">
   </head>
   <body>
     <div class="grid-frame">
@@ -29,7 +30,7 @@
               <div class="makeTodoForm">
                 <h2>Things I should do next...</h2>
                 <a href="javascript:void(0)"><i id="plusBtn" class="fa fa-plus-square-o fa-3x" aria-hidden="true"></i></a>
-                <input type='text' id='todo' placeholder='Please enter a new task'>
+                <input type='text' id='todo' placeholder='Please enter a new task' autofocus>
               </div>
             </div>
           </div>
