Added comments in css, fixed notifications

--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
         <div class="row">
           <div class="small-9 small-centered columns">
             <div class="notification">
-              <p>You completed a task.  Way to go!</p>
-              <a class="closeNotification" href="javascript:void(0)"><i class="fa fa-times" aria-hidden="true"></i></a>
+              <p>Completed.  Way to go!</p>
             </div>
-            <div class="markAll">
-              <a href="javascript:void(0)">Mark all as finished</a>
-              <i class="fa fa-check-circle" aria-hidden="true"></i>
+            <div class="notificationAdd">
+              <p>You've added a new task!</p>
+            </div>
+            <div>
+              <div class="deleteAll">
+                <a href="javascript:void(0)">Remove all from list</a>
+                <i class="fa fa-minus-circle" aria-hidden="true"></i>
+              </div>
+              <div class="markAll">
+                <a href="javascript:void(0)">Mark all as finished</a>
+                <i class="fa fa-check-circle" aria-hidden="true"></i>
+              </div>
               <hr>
             </div>
             <div class="listContainer">
